--- a/index.html
+++ b/index.html
@@ -6,33 +6,75 @@
         <title>SQLite Test App</title>
     </head>
     <body>
-        <h1>An app to test the new sqlite module in NodeJS</h1>
-        <form id="get-notes-form">
-            <h2>Get all notes</h2>
-            <button type="submit">Submit</button>
-        </form>
-        <form id="note-by-id-form">
-            <h2>Get note by ID</h2>
-            <input name="noteId" type="number" min="1" max="99" />
-            <button type="submit">Submit</button>
-        </form>
-        <form id="create-note-form">
-            <h2>Create new note</h2>
-            <label for="new-note-title">Title:</label>
-            <input id="new-note-title" name="title" type="text" />
-            <label for="new-note-content">Content:</label>
-            <input id="new-note-content" name="content" type="text" />
-            <button type="submit">Submit</button>
-        </form>
-        <form id="delete-by-id-form">
-            <h2>Delete by id</h2>
-            <input name="deleteId" type="number" min="1" max="99" />
-            <button type="submit">Submit</button>
-        </form>
-        <form id="delete-notes-form">
-            <h2>Delete all notes</h2>
-            <button type="submit">Submit</button>
-        </form>
+        <h1 id="main-heading">
+            An app to test the new sqlite module in NodeJS
+        </h1>
+        <div id="main-container">
+            <section id="forms-section">
+                <h2 id="forms-section-heading">Forms</h2>
+                <form id="get-notes-form" class="note-form">
+                    <h3 class="form-heading">Get all notes</h3>
+                    <button type="submit">Submit</button>
+                </form>
+                <form id="note-by-id-form" class="note-form">
+                    <h3 class="form-heading">Get note by ID</h3>
+                    <label for="get-note-id">Note Id:</label>
+                    <input
+                        name="noteId"
+                        id="get-note-id"
+                        type="number"
+                        min="1"
+                        max="99"
+                    />
+                    <button type="submit">Submit</button>
+                </form>
+                <form id="create-note-form" class="note-form">
+                    <h3 class="form-heading">Create new note</h3>
+                    <label for="new-note-title">Title:</label>
+                    <input id="new-note-title" name="title" type="text" />
+                    <label for="new-note-content">Content:</label>
+                    <input id="new-note-content" name="content" type="text" />
+                    <button type="submit">Submit</button>
+                </form>
+                <form id="edit-note-form" class="note-form">
+                    <h3 class="form-heading">Edit a note</h3>
+                    <label for="edit-note-id">Note Id:</label>
+                    <input
+                        name="noteId"
+                        id="edit-note-id"
+                        type="number"
+                        min="1"
+                        max="99"
+                    />
+                    <label for="edit-note-title">Title:</label>
+                    <input id="edit-note-title" name="title" type="text" />
+                    <label for="edit-note-content">Content:</label>
+                    <input id="edit-note-content" name="content" type="text" />
+                    <button type="submit">Submit</button>
+                </form>
+                <form id="delete-by-id-form" class="note-form">
+                    <h3 class="form-heading">Delete by id</h3>
+                    <label for="delete-note-id">Note Id:</label>
+                    <input
+                        name="deleteId"
+                        id="delete-note-id"
+                        type="number"
+                        min="1"
+                        max="99"
+                    />
+                    <button type="submit">Submit</button>
+                </form>
+                <form id="delete-notes-form" class="note-form">
+                    <h3 class="form-heading">Delete all notes</h3>
+                    <button type="submit">Submit</button>
+                </form>
+            </section>
+            <section id="notes-section">
+                <h2 id="notes-section-heading">Notes</h2>
+                <p id="message-text"></p>
+                <div id="notes-area"></div>
+            </section>
+        </div>
         <script type="module" src="/src/notes.ts"></script>
     </body>
 </html>
