--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             An app to test the new sqlite module in NodeJS
         </h1>
         <p id="logged-in-text">Name: GUEST Status: Not logged in</p>
-        <button id="log-out-buttom" type="button">Log Out</button>
+        <button id="log-out-button" type="button">Log Out</button>
         <div id="main-container">
             <section id="forms-section">
                 <h2 id="forms-section-heading">Forms</h2>
-                <form id="login-form">
+                <form id="login-form" class="note-form">
                     <h3 class="form-heading">Login</h3>
                     <label for="username-input">Username:</label>
                     <input
