Added user_id field to notes and updated styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <h1 id="main-heading">
             An app to test the new sqlite module in NodeJS
         </h1>
-        <p id="logged-in-text">Name: GUEST Status: Not logged in</p>
-        <button id="log-out-button" type="button">Log Out</button>
+        <section id="status-section">
+            <p id="logged-in-text">Name: GUEST Status: Not logged in</p>
+            <button id="log-out-button" type="button">Log Out</button>
+        </section>
         <div id="main-container">
             <section id="forms-section">
                 <h2 id="forms-section-heading">Forms</h2>
